Update to version 1.2.0, now Gui Mode is supported.